kustomization-overlays/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiada
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: kiada
        image: docker.io/luksa/kiada:0.5
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            port: 8080
            path: /healthz/ready
            scheme: HTTP
