kustomization-overlays/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiada
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    protocol: TCP
